tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_new.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
Create a Spago project in the current directory.

Usage: purescript-alexandrite new [--name <NAME>]

Flags:
      --name <NAME>  Package name. Defaults to the current directory name.
  -h, --help         Print help
--- stderr
