tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_root.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
alexandrite 0.1.0
Language implementation for the PureScript programming language.

Usage: alexandrite [FLAGS] [SUBCOMMAND]

Commands:
  help     Print this message or the help of the given subcommand(s)

Project commands:
  add      Add dependencies to a Spago package.
  build    Build a Spago workspace or package.
  lsp      Run the language server.
  new      Create a Spago project in the current directory.
  run      Build and run a Spago package with Node.js.
  test     Build and test one or more Spago packages with Node.js.
  watch    Build a Spago workspace or package and rebuild when inputs change.

Legacy commands:
  compile  Compile PureScript modules to JavaScript (experimental).

Documentation commands:
  docs     Documentation utilities.

Flags:
      --log-file                         Print log path.
      --query-log <LevelFilter>          Log level for the query engine.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: off)
      --checking-log <LevelFilter>       Log level for the type checker.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: off)
      --stdio
      --lsp-log <LevelFilter>            Log level for the language server.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: info)
      --source-command <SOURCE_COMMAND>  Command to use to get source files.

                                         This argument also disables the spago.lock integration.
      --diagnostics-on-open <bool>       Publish diagnostics on textDocument/didOpen.
                                         (default: true)
      --diagnostics-on-save <bool>       Publish diagnostics on textDocument/didSave.
                                         (default: true)
      --diagnostics-on-change            Publish diagnostics on textDocument/didChange.
  -h, --help                             Print help
  -V, --version                          Print version
--- stderr
