tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_test.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
Build and test one or more Spago packages with Node.js.

Usage: iris test [FLAGS] [-- ARGUMENTS]…

Arguments:
  [-- ARGUMENTS]…  Arguments passed to each test program.

Flags:
      --query-log <LevelFilter>     Log level for the query engine.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --checking-log <LevelFilter>  Log level for the type checker.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
  -p, --package <NAME>              Workspace package to build.
  -o, --output <DIR>                Output directory for compiled modules. Defaults to output in the workspace root.
  -q, --quiet                       Suppress build progress output.
      --color <COLOR>               When to use colors in human-readable diagnostics.
                                    [possible values: auto, always, never]
                                    (default: auto)
      --main <MODULE>               Module containing the test entry point.
  -h, --help                        Print help
--- stderr
