tests-e2e/tests/package_manager/snapshots/package_manager__cli__invalid_choice.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [invalid_choice] · command line:1:20
  •
  │
  • invalid value 'alway' for '--color'
  │   [possible values: auto, always, never]
  │
  │   tip: a similar value exists: 'always'
  │
  │ For more information, try '--help'.
  │
  │   iris build --color alway
  │                      ╰────
  •
