tests-e2e/tests/package_manager/snapshots/package_manager__cli__lsp_open_rejects_invalid_value.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid value 'yes' for '--diagnostics-on-open': provided string was not `true` or `false`

For more information, try '--help'.
